--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,16 @@ description: > # this means to ignore newlines until "baseurl:"
   Building Profits, Strengthening Communities
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kaneprofits.com" # the base hostname & protocol for your site, e.g. http://example.com
+
+remote_theme: raviriley/agency-jekyll-theme
+
+locale: "en-US" # See available languages in _data/sitetext.yml
+
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
 # Build settings
 # theme: minima
-remote_theme: raviriley/agency-jekyll-theme
 
 # plugins:
 # - jekyll-feed
