--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kane Profits LLC
+# TODO
+title: Kane Profits
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
   Kane Profits of Northern Colorado
@@ -29,6 +30,9 @@ url: "https://kaneprofits.com" # the base hostname & protocol for your site, e.g
 remote_theme: raviriley/agency-jekyll-theme
 
 locale: "en-US" # See available languages in _data/sitetext.yml
+
+#analytics:
+#  google: #Google Analytics tracking code here
 
 # twitter_username: jekyllrb
 # github_username:  jekyll
