--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -7,52 +7,38 @@ en: &DEFAULT_EN
 
   services:
     title: "Services"
-    text: "Lorem ipsum"
+    # TODO
+    text: "Small business owners wear many hats — let me help by offering expert bookkeeping and financial guidance to help your business thrive!"
     section: services
     list:
-      - title: "Small Business Finance"
+      - title: "Financial Planning"
+        # TODO
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-chart-line #find more at https://fontawesome.com/icons
       - title: "Bookkeeping"
+        # TODO
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-book
       - title: "Budgeting"
+        # TODO
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-chart-pie
 
   portfolio:
-    title: "Portfolio"
+    title: "Testemonials"
     text: "Lorem ipsum dolor sit amet consectetur. This is a test"
     section: portfolio
     closebutton: "Close Project"
 
   about:
     title: "About Us"
-    text: "our story"
-    body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
+    # text: "our story"
+    body: "At Kane Profits, I help small businesses in Northern Colorado succeed with bookkeeping and financial support. With 5 years of experience and a Master’s in Financial Economics, I'm excited to see your business succeed. Whether it’s budgeting, tax planning, or cash flow management, we can team up to make your financial goals a reality!  "
     section: about
-
-  clients:
-    section: clients
-    max-height: 100px
-    horizontal-scrolling: "" #"yes/no"
-    list:
-      - title: "Watch Maker"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/envato.jpg
-      - title: "designmodo"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/designmodo.jpg
-      - title: "themeforest"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/themeforest.jpg
-      - title: "Creative Market"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/creative-market.jpg
-
 
   contact:
     title: "Contact Us"
+    # TODO
     text: "Lorem ipsum or call 123456789"
     section: contact
     name: "Name*"
@@ -69,16 +55,15 @@ en: &DEFAULT_EN
   footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com
-        icon: "fab fa-twitter"
-      - url: https://facebook.com
+      - url: https://www.facebook.com/61569783748427
         icon: "fab fa-facebook-f"
-      - url: https://linkedin.com
-        icon: "fab fa-linkedin-in"
-      - url: https://github.com/raviriley/agency-jekyll-theme
-        icon: "fab fa-github"
-      - url: https://instagram.com
-        icon: "fab fa-instagram"
+        # TODO
+#      - url: https://linkedin.com
+#        icon: "fab fa-linkedin-in"
+#      - url: https://github.com/raviriley/agency-jekyll-theme
+#        icon: "fab fa-github"
+#      - url: https://instagram.com
+#        icon: "fab fa-instagram"
 en-US:
   <<: *DEFAULT_EN
 en-CA:
