--- a/_data/style.yml
+++ b/_data/style.yml
@@ -5,6 +5,7 @@
 
 #Image Customization
 header-image: "../img/mountains-filter.jpg"
+profile-image: "assets/img/profile.jpg"
 # contact-image: "../img/contact.png"
 #Font Awesome icon for portfolio grid when an item is hovered over
 #portfolio-icon: fas fa-expand-arrows-alt fa-3x #default: fas fa-plus fa-3x
