--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -13,15 +13,15 @@ en: &DEFAULT_EN
     list:
       - title: "Financial Planning"
         # TODO
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
+        # desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-chart-line #find more at https://fontawesome.com/icons
       - title: "Bookkeeping"
         # TODO
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
+        # desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-book
       - title: "Budgeting"
         # TODO
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
+        # desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-chart-pie
 
   portfolio:
@@ -39,27 +39,31 @@ en: &DEFAULT_EN
   contact:
     title: "Contact Us"
     # TODO
-    text: "Lorem ipsum or call 123456789"
-    section: contact
-    name: "Name*"
-    name-validation: "Please enter your name."
-    email: "Email*"
-    email-validation: "Please enter your email address."
-    phone: "Phone Number"
-    phone-validation: "Please enter your phone number."
-    message: "Message*"
-    message-validation: "Please enter a message."
-    subject: "Contact Form Submission"
-    submit: "Send Message"
+    text: "Ready to take your business to the next level?"
+    email-link: mailto:kaneprofits@gmail.com
+    email-button-text: "Email Us"
+
+#    section: contact
+#    name: "Name*"
+#    name-validation: "Please enter your name."
+#    email: "Email*"
+#    email-validation: "Please enter your email address."
+#    phone: "Phone Number"
+#    phone-validation: "Please enter your phone number."
+#    message: "Message*"
+#    message-validation: "Please enter a message."
+#    subject: "Contact Form Submission"
+#    submit: "Send Message"
 
   footer:
     legal: "Privacy Policy"
     social:
       - url: https://www.facebook.com/61569783748427
         icon: "fab fa-facebook-f"
-        # TODO
-#      - url: https://linkedin.com
-#        icon: "fab fa-linkedin-in"
+      - url: mailto:kaneprofits@gmail.com
+        icon: "fas fa-envelope"
+      - url: https://www.linkedin.com/in/sarakane0319/
+        icon: "fab fa-linkedin-in"
 #      - url: https://github.com/raviriley/agency-jekyll-theme
 #        icon: "fab fa-github"
 #      - url: https://instagram.com
