--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@
 
 # TODO
 title: Kane Profits
-email: your-email@example.com
+#logo:
+#  path: "assets/img/icon.png"
+email: kaneprofits@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Kane Profits of Northern Colorado
   Building Profits, Strengthening Communities
